# day10-tui

./: .gitmodules  .ocamlformat  .opambuild.sh  README.md  day10-tui.opam  dune  dune-project
lib/: dialog_widget.ml  dune  list_widget.ml  status_bar_widget.ml  table_widget.ml  text_viewer_widget.ml
